# app-test-automation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: rules.schema.md
samples/nitrjul26/: Revised_1_SOW.xlsx  Revised_Age_Criteria.xlsx  Revised_Eligibility.xlsx
samples/sbiaapr26/: Eligibility_Criteria.xlsx  Medium_of_Paper_Statewise.xlsx  Revised_11_SOW.xlsx  Revised_1_Age_Criteria.xlsx  State wise District list.xlsx
tests/: test_validation_extractor.py  test_workbook_parser.py
tool/: models.py
tool/extractor/: build_rules.py  constants.py  llm.py  other_details.py  validation_extractor.py  workbook_parser.py
