[project]
name = "app-test-automation"
version = "0.1.0"
description = "Automated validation tool for multi-page exam registration web applications"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "openai>=1.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tool"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
